static/notes/notes.css
.submit-button {
    margin: 2vh auto 5vh;
}
.input::-webkit-calendar-picker-indicator {
    display: none;
}

div.menu {
    display: flex;
    margin: auto auto 5vh;
}

details > summary:first-of-type {
    list-style-type: none;
}

details.menu {
    padding: 2vh;
}
div.menu a {
    color: black;
}
div.menu a:hover {
    text-decoration: none;
    color: #004E7C;
}

div.chapters {
    display: flex;
    flex-direction: column;
}
div.chapters a.chapter-link::before {
    content: "    *";
    white-space: pre;
}

div.group {
    display: flex;
    flex-direction: column;
}

.material_title {
    margin: auto;
    font-size: 6vh;
    max-width: 75%;
    text-align: center;
}
.chapter_number {
    margin: 4vh auto 1vh;
    font-size: 4.5vh;
}

.material_divider {
    color: black;
    background-color: black;
    margin-top: 8vh;
}

div.note {
    border: black 0.25vh solid;
    margin: 2vh auto;
    width: 50vw;
    border-radius: 3vh;
    padding: 5vh;
    text-align: center;
}
p.note-content {
    text-align: left;
}
.note-page {
    font-size: 3.5vh;
    font-weight: 500;
}
.medium-text {
    font-size: 2.25vh;
    font-weight: 300;
}
.large-text {
    font-size: 3.25vh;
    font-weight: 300;
}
div.note p {
    word-wrap: break-word;
}

.network {
    height: 100vh;
    width: 85%;
    border: none;
    margin: auto;
    display: flex;
}

.form {
    display: flex;
    margin: auto;
    flex-direction: row;
}

.from-links {
    flex-direction: column;
    align-self: center;
    margin-left: 1em;
}

.to-link {
    display: flex;
    align-items: center;
    margin-right: 1em;
}

.note-link {
    content: url('../left-arrow.png');
}

.iframe {
    height: 70vh;
    width: 80%;
    border: none;
    margin: auto;
    display: flex;
}

div.pagination {
    display: flex;
    margin: auto;
    flex-direction: row;
    border: black 0.25vh solid;
    border-radius: .75vh;
}
div.pagination-item {
    margin: 1vw;
}

div.current-page {
    background-color: rgba(33, 33, 33, .5);
}

